# agentlabs

./: .env.example  .gitignore  LICENSE  Makefile  NOTICE  README.md  build-clients.sh  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: backend.yml  build-console.yml  build-frontend.yml  check-backend.yml  check-console.yml  check-frontend.yml  deploy-to-cloud.yml  (+7 more)
caddy/: Dockerfile  docker-entrypoint.sh
cloud-proxy/: Caddyfile  Dockerfile
console/: .eslintrc.cjs  .prettierrc  Dockerfile.dev  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/: .eslintrc.cjs  .prettierrc  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
nginx/: nginx.conf
sdks/python-sdk/: .gitignore  Dockerfile  build.Dockerfile  pyproject.toml
sdks/python-sdk/agentlabs/: agent.py  attachment.py  chat.py  http.py  logger.py  member.py  project.py  realtime.py  server.py  types.py
sdks/python-sdk/agentlabs/_internals/: const.py  http.py  logger.py  utils.py
sdks/python-sdk/scripts/: docker-entrypoint.sh
server/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-entrypoint.dev.sh  docker-entrypoint.sh  nest-cli.json  openapi.json  openapi.yaml  package-lock.json  package.json  print-oas.Dockerfile  tsconfig.json
typescript-client/: build.sh  build_for_console.sh  build_for_frontend.sh  client.ts  package-lock.json  package.json  utils.sh
wikipedia-agent/: Dockerfile  requirements.txt
(+618 files in other folders)
