[tool.poetry]
name = "agentlabs-sdk"
version = "0.0.0"
description = "AgentLabs SDK for Python"
authors = ["Aurélien Brabant <aurel@agentlabs.dev>"]
readme = "README.md"
packages = [
	{ include = "agentlabs" }
]

[tool.poetry.dependencies]
python = ">=3.9"
websocket-client = "^1.6.3"
python-socketio = "^5.9.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
